--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,14 +2,7 @@ name: Publish New Version
 
 on:
   push:
-    branches:
-      - main
-  workflow_dispatch:
-    inputs:
-      RELEASE:
-        description: 'Release version'
-        required: true
-        default: '0.0.1'
+    tags: [ 'v*.*.*' ]
 
 jobs:
   publish:
@@ -35,7 +28,7 @@ jobs:
 
       - name: Publish
         uses: softprops/action-gh-release@v2
-        with:
-          tag_name: v${{github.event.inputs.RELEASE}}
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
           files: release/*
           draft: true
