--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,34 +1,30 @@
 name: Publish New Version
-
 on:
   push:
-    tags: [ 'v*.*.*' ]
-
+    tags:
+      - v*.*.*
 jobs:
   publish:
     name: Build and Publish to Github
     runs-on: ubuntu-latest
     concurrency:
-      group: "publish"
+      group: publish
       cancel-in-progress: false
     steps:
-      - uses: actions/checkout@v4
-
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Prepare
         id: prep-env
         run: ./data/gha-prep.sh
-
       - name: Build
         id: build-zip
         run: ./data/gha-build.sh
-
       - name: Package
         id: package-tf
         run: ./data/gha-package.sh
-
       - name: Publish
         uses: softprops/action-gh-release@v2
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          files: release/*
-          draft: true
+        draft: true
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref_name }}
+        files: release/*
