--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,8 @@ jobs:
     concurrency:
       group: publish
       cancel-in-progress: false
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
